--- a/public/index.html
+++ b/public/index.html
@@ -2,40 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-<<<<<<< HEAD
-    
-=======
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
->>>>>>> b3dc19fcc2732a7588aa355b74c1c355aafe4256
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-<<<<<<< HEAD
-<link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;600;700&family=Montserrat+Alternates:wght@100;200;300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,200&family=Oleo+Script+Swash+Caps:wght@400;700&display=swap"
-  rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;600;700&family=Mirza:wght@400;500;600;700&family=Montserrat+Alternates:wght@100;200;300;400;500;600;700&family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,200&family=Oleo+Script+Swash+Caps:wght@400;700&display=swap"
-    rel="stylesheet">
+  
+    <link href="https://fonts.googleapis.com/css2?family=Mirza:wght@400;500;600;700&family=Montserrat+Alternates:wght@100;200;300;400;500;600;700&family=Oleo+Script+Swash+Caps:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   <style>
-    *{
-      margin: 0;
-      padding: 0;
-     font-family: 'Montserrat', sans-serif;
-    }
-    .App{
-      width: 100%;
-      height: 100%;
-    }
 
-   </style>
     <title>Sytycc wbs</title>
-=======
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -52,14 +31,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
->>>>>>> b3dc19fcc2732a7588aa355b74c1c355aafe4256
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-<<<<<<< HEAD
-   
-=======
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -70,6 +45,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
->>>>>>> b3dc19fcc2732a7588aa355b74c1c355aafe4256
+    
   </body>
 </html>
